# fcitx5

src/frontend/waylandim/: waylandim.cpp  waylandim.h
src/modules/spell/: CMakeLists.txt
